Fixed message box size on case page Added collapse to case pages

--- a/app/client/stylesheets/style.less
+++ b/app/client/stylesheets/style.less
@@ -230,7 +230,7 @@ body {
     border-radius: 5px;
     border-style: solid;
     border-width: 1px;
-    border-color: #eee;
+    border-color: #fff;
     background-color: #fff;
 }
 
@@ -479,15 +479,28 @@ body {
 }
 
 .record-view {
-    margin-top: 10px;
+    margin-top: 5px;
     margin-bottom: 10px;
-    padding: 10px;
+    padding: 5px;
     background-color: white;
     text-align: center;
 }
 
+.record-details {
+    background-color: white;
+    padding: 0px;
+    margin: 0px;
+}
+
+.record-comments {
+    background-color: white;
+    padding: 0px;
+    margin: 0px;
+}
+
 .record-view h3 {
-    margin-top: 10px;
+    margin-top: 0px;
+    margin-bottom: 0px;
     margin-left: 0px;
     text-align: left;
     display: inline-block;
@@ -495,8 +508,8 @@ body {
 .record-view a {
     margin-right: 2px;
     margin-left: 2px;
-    padding-top: 2px;
-    padding-bottom: 2px;
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 
 .record-view .tag {
